--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 body, html {
     height: 100%;
     margin: 0;
@@ -9,9 +13,10 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #919D47;
+
 }
 
-.login {
+.nav-right {
     float: right;
 }
 
@@ -21,7 +26,7 @@ ul {
 
 .title {
   position: absolute;
-  left: 41%;
+  /*left: 41%;*/
   font-size: 33px;
   color: white;
   font-family: 'Dancing Script', cursive;
@@ -43,11 +48,9 @@ li .login:hover {
     background-color: #738637;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
-
 .background-image {
     /* The image used */
-    background-image: url("https://image.freepik.com/foto-gratis/fondo-de-madera-con-tulipanes-bonitos_23-2147600685.jpg");
+    background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");
 
     /* Full height */
     height: 100%;
@@ -58,49 +61,227 @@ li .login:hover {
     background-size: cover;
 }
 
-h1 {
-  margin: 0;
+.box {
+
+  /*background-image: url("https://img00.deviantart.net/d861/i/2010/348/c/c/brown_wall_texture_by_fantasystock-d34un9s.jpg");*/
+  background-color: #919D47;
+  width: 550px;
+  height: 400px;
+  /*border: 2px solid black;*/
+  border-radius: 5%;
+  vertical-align: center;
+
+  margin-top: 130px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+
+
+/*---------------------------------------------------------------------------*/
+
+.start-btn:hover {
+  background-color: darkolivegreen;
+}
+.start-box h1{
+  color: ivory;
+  text-align: center;
   padding-top: 20px;
   font-family: 'Dancing Script', cursive;
-  color: white;
-  position: relative;
-  text-align: center;
-  font-size: 100px;
+  font-size: 50px;
+  border-bottom: 7px solid ivory;
+  padding-bottom: 35px;
 }
 
-p {
-  text-align: center;
-  color: white;
+.start-box p{
+  padding: 0px 30px;
+  color: ivory;
   font-family: 'Raleway', sans-serif;
-  font-size: 20px;
+  font-size: 17px;
   font-weight: bold;
-  padding-top: 10px;
+  text-align: center;
 }
 
-.description {
-  width: 45%;
-  max-width: 700px;
-  padding: 80px 0 0 5%;
-    
+.start-btn {
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  font-size: 30px;
+  background: #738637;
+  margin-left: 165px;
+  margin-top: 20px;
+  width: 220px;
+  height: 50px;
+  color: ivory;
+  font-weight: bold;
+  border-radius: 8px;
 }
 
-.btn {
+
+
+/*--------------------------------------------------------------------------*/
+
+
+.signup-login {
+  display: inline-block;
+  text-align: center;
+}
+
+.signup-login h1{
+  font-family: 'Dancing Script', cursive;
+  font-size: 50px;
+  font-weight: bold;
+
+}
+
+.signup-login .signup {
+  float: left;
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 250px;
+  height: 360px;
+  border: 6px solid ivory;
+  padding: 40px 10px;
+  font-family: 'Raleway', sans-serif;
+  color: ivory;
+  font-weight: bold;
+  border-radius: 5%;
+}
+
+.signup-login .login {
+  position: absolute;
+  left: 250px;
+  margin-right: 20px;
+  margin-top: 20px;
+  width: 250px;
+  height: 360px;
+  border: 6px solid ivory;
+  margin-left: 30px;
+  padding: 40px 10px;
+  font-family: 'Raleway', sans-serif;
+  color: ivory;
+  font-weight: bold;
+  border-radius: 5%;
+
+}
+
+.signup-login button {
+  margin-top: 20px;
+  background: #738637;
+  border: none;
+  font-family: 'Raleway', sans-serif;
+  font-size: 25px;
+  font-weight: bold;
+  color: ivory;
+  height: 40px;
+  border-radius: 4px;
+  padding: 0 10px;
+}
+
+.signup-login button:hover {
+  background: darkolivegreen;
+}
+
+/*---------------------------------------------------------*/
+
+.login-form {
   display: block;
-  margin: 40px auto;
-  -webkit-border-radius: 6;
-  -moz-border-radius: 6;
-  border-radius: 6px;
+  text-align: center;
+}
+
+.login-box h1{
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  color: ivory;
+  font-size: 50px;
+
+}
+
+.login-form input{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
   font-family: 'Raleway', sans-serif;
-  color: #ffffff;
   font-size: 20px;
-  font-weight: bold;
-  background: #919D47;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
+  height: 50px;
+  width: 300px;
+  padding-left: 10px;
+  border-radius: 5px;
   border: none;
 }
 
-.btn:hover {
+.login-form button{
+  margin-top: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 25px;
+  height: 50px;
+  width: 300px;
+  border: none;
   background: #738637;
-  text-decoration: none;
+  border-radius: 5px;
+  font-weight: bold;
+  color: ivory;
+}
+
+.login-form button:hover {
+  background: darkolivegreen;
+
+}
+
+.login-border {
+  margin-left: 20px;
+  margin-top: 20px;
+  float: left;
+  width: 510px;
+  height: 360px;
+  border: 6px solid ivory;
+  border-radius: 4%;
+}
+
+
+/*----------------------------------------------*/
+
+.signup-form {
+  display: block;
+  text-align: center;
+}
+
+
+.signup-box h1{
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
+  color: ivory;
+  font-size: 40px;
+  padding-top: 10px;
+}
+
+.signup-form input{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  height: 30px;
+  width: 300px;
+  padding-left: 10px;
+  border-radius: 5px;
+  border: none;
+}
+
+.signup-form button{
+  font-family: 'Raleway', sans-serif;
+  font-size: 25px;
+  height: 50px;
+  width: 300px;
+  border: none;
+  background: #738637;
+  border-radius: 5px;
+  font-weight: bold;
+  color: ivory;
+  margin-top: 20px;
+}
+
+.signup-form button:hover{
+  background: darkolivegreen;
 }
