--- a/public/create-order.css
+++ b/public/create-order.css
@@ -16,6 +16,10 @@ ul {
 
 }
 
+.nav-right {
+    float: right;
+}
+
 .home {
     float: right;
 }
@@ -83,8 +87,8 @@ li .home:hover {
 
   /*background-image: url("https://img00.deviantart.net/d861/i/2010/348/c/c/brown_wall_texture_by_fantasystock-d34un9s.jpg");*/
   background-color: #919D47;
-  width: 550px;
-  height: 70px;
+  width: fit-content;
+  height: auto;
   /*border: 2px solid black;*/
   border-radius: 15px;
   vertical-align: center;
@@ -93,6 +97,8 @@ li .home:hover {
   margin-left: auto;
   margin-right: auto;
   position: relative;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
 .title-box h1{
@@ -101,6 +107,7 @@ li .home:hover {
   font-weight: bold;
   text-align: center;
   padding-top: 10px;
+  padding-bottom: 10px;
   color: ivory;
 
 }
@@ -492,7 +499,11 @@ img {
 
 
 
-
+@media (max-width: 320px) {
+  ul {
+    background-color: blue;
+  }
+}
 
 
 
