--- a/public/index.css
+++ b/public/index.css
@@ -13,16 +13,12 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: #919D47;
-
 }
 
 .nav-right {
     float: right;
 }
 
-.sign-up {
-  margin: 0px;
-}
 
 .title {
   position: absolute;
@@ -35,7 +31,7 @@ ul {
 }
 
 li a {
-    display: block;
+    /*display: block;*/
     color: white;
     text-align: center;
     padding: 14px 16px;
@@ -49,48 +45,45 @@ li .login:hover {
 }
 
 .background-image {
-    /* The image used */
     background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");
-
-    /* Full height */
     height: 100%;
-
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .box {
-
-  /*background-image: url("https://img00.deviantart.net/d861/i/2010/348/c/c/brown_wall_texture_by_fantasystock-d34un9s.jpg");*/
   background-color: #919D47;
-  width: 550px;
-  height: 400px;
-  /*border: 2px solid black;*/
+  /*max-width: 550px;*/
+  width: fit-content;
+  height: auto;
   border-radius: 5%;
-  vertical-align: center;
-
-  margin-top: 130px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 130px auto;
   position: relative;
+
+
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  /*flex-wrap: wrap;*/
+  align-content: space-around;
+  text-align: center;
 }
+
 
 
 /*---------------------------------------------------------------------------*/
 
-.start-btn:hover {
-  background-color: darkolivegreen;
-}
+
 .start-box h1{
   color: ivory;
   text-align: center;
-  padding-top: 20px;
+  padding-top: 0px;
   font-family: 'Dancing Script', cursive;
   font-size: 50px;
   border-bottom: 7px solid ivory;
   padding-bottom: 35px;
+  /*margin-top: -10px;*/
 }
 
 .start-box p{
@@ -100,6 +93,7 @@ li .login:hover {
   font-size: 17px;
   font-weight: bold;
   text-align: center;
+  max-width: 500px;
 }
 
 .start-btn {
@@ -107,19 +101,22 @@ li .login:hover {
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
   background: #738637;
-  margin-left: 165px;
-  margin-top: 20px;
+  /*margin-left: 165px;*/
+  /*margin-top: 40px;*/
   width: 220px;
   height: 50px;
   color: ivory;
   font-weight: bold;
   border-radius: 8px;
+  margin:35px auto;
+    display:block;
 }
 
-
+.start-btn:hover {
+  background-color: darkolivegreen;
+}
 
 /*--------------------------------------------------------------------------*/
-
 
 .signup-login {
   display: inline-block;
@@ -135,8 +132,9 @@ li .login:hover {
 
 .signup-login .signup {
   float: left;
-  margin-left: 20px;
-  margin-top: 20px;
+  /*display: inline-block;*/
+  /*margin-left: 20px;
+  margin-top: 20px;*/
   width: 250px;
   height: 360px;
   border: 6px solid ivory;
@@ -145,22 +143,25 @@ li .login:hover {
   color: ivory;
   font-weight: bold;
   border-radius: 5%;
+  flex-grow: 1;
+  /*flex-basis: 250px;*/
 }
 
 .signup-login .login {
-  position: absolute;
-  left: 250px;
-  margin-right: 20px;
-  margin-top: 20px;
+  display: inline-block;
+  /*position: absolute;
+  left: 250px;*/
+
   width: 250px;
   height: 360px;
   border: 6px solid ivory;
-  margin-left: 30px;
-  padding: 40px 10px;
+  margin-left: 20px;
+  padding: 40px 0px;
   font-family: 'Raleway', sans-serif;
   color: ivory;
   font-weight: bold;
   border-radius: 5%;
+  /*flex-grow: 1;*/
 
 }
 
@@ -193,14 +194,14 @@ li .login:hover {
   text-align: center;
   color: ivory;
   font-size: 50px;
-
+  margin-top: 0;
 }
 
 .login-form input{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  margin-bottom: 10px;
   font-family: 'Raleway', sans-serif;
   font-size: 20px;
   height: 50px;
@@ -228,7 +229,7 @@ li .login:hover {
 
 }
 
-.login-border {
+/*.login-border {
   margin-left: 20px;
   margin-top: 20px;
   float: left;
@@ -236,7 +237,7 @@ li .login:hover {
   height: 360px;
   border: 6px solid ivory;
   border-radius: 4%;
-}
+}*/
 
 
 /*----------------------------------------------*/
@@ -252,7 +253,8 @@ li .login:hover {
   text-align: center;
   color: ivory;
   font-size: 40px;
-  padding-top: 10px;
+  /*padding-top: 0px;*/
+  top: -20px;
 }
 
 .signup-form input{
@@ -285,3 +287,30 @@ li .login:hover {
 .signup-form button:hover{
   background: darkolivegreen;
 }
+
+
+
+@media (max-width: 600px) {
+    .signup-login .login {
+      display: none;
+    }
+    .products {
+      display: none;
+    }
+}
+
+@media (max-width: 400px) {
+  .title {
+    font-size: 28px;
+    padding-top: 12px;
+  }
+}
+
+
+
+
+
+
+/*input:required {
+  box-shadow: 4px 4px 20px rgba(200, 0, 0, 0.85);
+}*/
