--- a/public/products.css
+++ b/public/products.css
@@ -7,28 +7,29 @@ body, html {
     margin: 0;
 }
 
+body {
+  background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");
+
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #919D47;
-
 }
 
 .home {
     float: right;
 }
 
-.edit-user {
-
-}
-
 
 .title {
-  /*text-align: center;*/
   position: absolute;
-  /*left: 41%;*/
   font-size: 33px;
   color: white;
   font-family: 'Dancing Script', cursive;
@@ -50,38 +51,31 @@ li .home:hover {
     background-color: #738637;
 }
 
-.background-image {
-    /* The image used */
+/*.background-image {
     background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");
-
-    /* Full height */
     height: 100%;
-
-    /* Center and scale the image nicely */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+}*/
 
 .box {
-
-  /*background-image: url("https://img00.deviantart.net/d861/i/2010/348/c/c/brown_wall_texture_by_fantasystock-d34un9s.jpg");*/
   background-color: #919D47;
-  width: 1000px;
-  height: 500px;
+  width: fit-content;
+  height: auto;
   /*border: 2px solid black;*/
   border-radius: 15px;
   vertical-align: center;
 
-  margin-top: 70px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 70px auto;
   position: relative;
+  padding: 20px 20px 1px 20px;
+  /*display: inline-flex;*/
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.dozen {
 
-}
 
 img {
   width: 240px;
@@ -90,8 +84,24 @@ img {
 
 
 .products {
-  display: inline-block;
+  /*display: inline-block;*/
   text-align: center;
+
+}
+
+.pro {
+
+  width: 290px;
+  height: 460px;
+
+  border: 6px solid ivory;
+  padding: 40px 10px;
+  font-family: 'Raleway', sans-serif;
+  color: ivory;
+  font-weight: bold;
+  border-radius: 5%;
+  margin-bottom: 20px;
+
 }
 
 .products h1{
@@ -105,7 +115,7 @@ img {
 .products p{
   font-size: 20px;
 }
-
+/*
 .products .dozen {
   float: left;
   margin-left: 20px;
@@ -127,8 +137,9 @@ img {
   margin-top: 20px;
   width: 290px;
   height: 460px;
-  border: 6px solid ivory;
   margin-left: 30px;
+
+  border: 6px solid ivory;
   padding: 40px 10px;
   font-family: 'Raleway', sans-serif;
   color: ivory;
@@ -152,7 +163,7 @@ img {
   font-weight: bold;
   border-radius: 5%;
 
-}
+}*/
 
 .products button {
   margin-top: 10px;
@@ -170,3 +181,33 @@ img {
 .products button:hover {
   background: darkolivegreen;
 }
+
+
+@media (max-width: 400px) {
+  .title {
+    font-size: 28px;
+    padding-top: 12px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----*/
