--- a/public/view-orders.css
+++ b/public/view-orders.css
@@ -187,7 +187,7 @@ img {
 
 }
 
-@media (max-width: 500px) {
+@media (max-width: 550px) {
   .details h1 {
     font-size: 30px;
   }
@@ -197,6 +197,12 @@ img {
   .orders .div-left {
     width: fit-content;
     height: fit-content;
+  }
+  .lofOut {
+    display: none;
+  }
+  .title-view {
+    font-size: 30px;
   }
 }
 
