--- a/public/view-orders.css
+++ b/public/view-orders.css
@@ -202,7 +202,13 @@ img {
     display: none;
   }
   .title-box h1 {
+    padding-top: 5px;
     font-size: 30px;
+  }
+  .title-box {
+    width: auto;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
