--- a/public/view-orders.css
+++ b/public/view-orders.css
@@ -198,7 +198,7 @@ img {
     width: fit-content;
     height: fit-content;
   }
-  .lofOut {
+  .logOut {
     display: none;
   }
   .title-box h1 {
