--- a/public/images/Modern Romance_files/create-order.css
+++ b/public/images/Modern Romance_files/create-order.css
@@ -83,7 +83,7 @@ li .home:hover {
 
 .title-box {
   background-color: #919D47;
-  width: fit-content;
+  width: 550px;
   height: 70px;
   /*border: 2px solid black;*/
   border-radius: 15px;
@@ -93,7 +93,6 @@ li .home:hover {
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  padding: 0 30px;
 }
 
 .title-box h1{
@@ -142,6 +141,7 @@ img {
   border-radius: 5%;
   margin-bottom: 20px;
 
+  grid-column: 1 / span 3;
 }
 
 /*.products .dozen {
@@ -213,7 +213,8 @@ img {
 /*----------------------------------------------------------*/
 
 .address-form {
-  padding-top: 10px;
+  padding-top: 40px;
+  margin-left: 30%;
   text-align: center;
 }
 
@@ -233,7 +234,7 @@ img {
   /*margin-left: 0px;*/
   margin-top: 10px;
   background: #738637;
-  /*margin-left: -300px;*/
+  margin-left: -300px;
   border: none;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
@@ -252,14 +253,13 @@ img {
 /*-----------------------------------------------*/
 
 .delivery-date div {
-  margin-bottom: 20px;
+  margin-top: 20px;
   border: 6px solid ivory;
   border-radius: 5%;
   height: 460px;
   width: 470px;
   text-align: center;
   padding: 0 20px;
-   grid-column: 1 / span 3;
 }
 
 .delivery-date h1{
@@ -283,13 +283,13 @@ img {
 }
 
 .spontaneous {
-  /*float: left;
-  margin-left: 20px;*/
+  float: left;
+  margin-left: 20px;
 }
 
 .choose-date {
-  /*position: absolute;
-  left: 510px;*/
+  position: absolute;
+  left: 510px;
 }
 
 .spontaneous button{
@@ -364,15 +364,14 @@ img {
 }
 
 .note input{
-  vertical-align:top;
+  vertical-align: middle;
   text-align: left;
-  padding-bottom: 50%;
+  padding-bottom: 25%;
   padding-left: 10px;
   height: 300px;
   width: 500px;
-  margin-top: 20px;
+  margin-top: 9%;
   font-size: 20px;
-  border-radius: 5px;
 }
 
 .note button{
@@ -405,8 +404,7 @@ img {
   font-weight: bold;
   font-size: 40px;
   color: ivory;
-  /*padding-top: 20px;*/
-  margin-top: -10px;
+  padding-top: 20px;
   margin-bottom: 10px;
 
 }
@@ -485,8 +483,7 @@ img {
 
 .confirmation {
   text-align: center;
-  padding-top: 10px;
-  margin-bottom: 50px;
+  padding-top: 90px;
 }
 
 .confirmation h1{
@@ -496,7 +493,7 @@ img {
   color: ivory;
   padding-top: 25px;
   margin-bottom: 10px;
-  /*margin-top: -40px;*/
+  margin-top: 0px;
 
 }
 
