--- a/public/home.css
+++ b/public/home.css
@@ -175,6 +175,23 @@ li .products:hover {
   }
 }
 
+@media (max-height: 650px) {
+  body {
+    background-image: url("https://img.elo7.com.br/product/original/1C102EA/adesivo-papel-de-parede-chevron-floral-escolha-a-cor.jpg");
+
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+  }
+  .background-image {
+      background-image: none;
+      height: 100%;
+      width: 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+  }
+}
+
 
 /*@media (max-width: 320px) {
   ul {
