styling issues for diff browsers

--- a/public/create-order.css
+++ b/public/create-order.css
@@ -55,7 +55,9 @@ li .home:hover {
 
 .box {
   background-color: #919D47;
-  width: fit-content;
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content; /* Chrome */
   height: fit-content;
   border-radius: 15px;
   vertical-align: center;
@@ -71,7 +73,9 @@ li .home:hover {
 
 .title-box {
   background-color: #919D47;
-  width: fit-content;
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content; /* Chrome */
   height: 70px;
   border-radius: 15px;
   vertical-align: center;
