--- a/public/home.css
+++ b/public/home.css
@@ -146,7 +146,9 @@ li .products:hover {
     font-size: 20px;
   }
   .box {
-    width: fit-content;
+    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    width: -moz-max-content;    /* Firefox/Gecko */
+    width: -webkit-max-content; /* Chrome */
   }
 
 }
