--- a/public/products.css
+++ b/public/products.css
@@ -52,7 +52,9 @@ li .home:hover {
 
 .box {
   background-color: #919D47;
-  width: fit-content;
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content; /* Chrome */
   height: auto;
   border-radius: 15px;
   vertical-align: center;
