--- a/public/view-orders.css
+++ b/public/view-orders.css
@@ -59,7 +59,9 @@ li .home:hover {
 .box {
 
   background-color: #919D47;
-  width: fit-content;
+  width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+  width: -moz-max-content;    /* Firefox/Gecko */
+  width: -webkit-max-content; /* Chrome */
   height: auto;
   border-radius: 15px;
   vertical-align: center;
@@ -168,7 +170,9 @@ img {
     display: none;
   }
   .box {
-    width: fit-content;
+    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    width: -moz-max-content;    /* Firefox/Gecko */
+    width: -webkit-max-content; /* Chrome */
   }
 
 }
@@ -181,8 +185,12 @@ img {
     font-size: 23px;
   }
   .orders .div-left {
-    width: fit-content;
-    height: fit-content;
+    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    width: -moz-max-content;    /* Firefox/Gecko */
+    width: -webkit-max-content; /* Chrome */
+    height: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    height: -moz-max-content;    /* Firefox/Gecko */
+    height: -webkit-max-content; /* Chrome */
   }
   .logOut {
     display: none;
@@ -192,7 +200,11 @@ img {
     font-size: 30px;
   }
   .title-box {
-    width: fit-content;
-    height: fit-content;
+    width: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    width: -moz-max-content;    /* Firefox/Gecko */
+    width: -webkit-max-content; /* Chrome */
+    height: intrinsic;           /* Safari/WebKit uses a non-standard name */
+    height: -moz-max-content;    /* Firefox/Gecko */
+    height: -webkit-max-content; /* Chrome */
   }
 }
